# versatile-context-decorator

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  NOTICE  README.md  cla.md  code_of_conduct.md  corporate_cla.md  pyproject.toml
tests/: __init__.py  test_context_decorator.py
versatile_context_decorator/: __init__.py  context_decorator.py
