# Copyright (c) 2022-2023 Corning Incorporated. All rights reserved.
[tool.poetry]
name = "versatile_context_decorator"
version = "0.0.1"
description = "Versatile ContextDecorator"
authors = ["Elizaveta Kishchukova <kishchuked@corning.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "7.3.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-freezer = "^0.4.8"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
known_firstparty = "versatile_context_decorator"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"

[tool.coverage]
[tool.coverage.run]
branch = true
include = ['versatile_context_decorator/*']
[tool.coverage.report]
fail_under = 85
show_missing = true
skip_empty = true
skip_covered = true

[tool.pytest.ini_options]
testpaths = 'tests'
addopts = '--cov --no-cov-on-fail'

